cleaned up code and fixed navbar bug where it would display behind everything else

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -11,9 +11,16 @@
   font-size: 20px;
   font-family: 'Source Sans Pro', sans-serif;
   padding: 2.5em;
+  z-index: 9999;
 }
 .title {
   font-family: 'bungee', sans-serif;
   font-size: 36px;
+}
+
+.nav div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
